--- a/package.json
+++ b/package.json
@@ -22,18 +22,15 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.13",
-    "babel-jest": "^21.2.0",
-    "jest": "^21.2.1",
-    "jest-serializer-vue": "^0.2.0",
-    "vue-jest": "^1.0.0",
-    "regenerator-runtime": "^0.11.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "bootstrap": "^4.1.1",
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -45,15 +42,19 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
+    "jest": "^21.2.1",
+    "jest-serializer-vue": "^0.2.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
+    "regenerator-runtime": "^0.11.0",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-easytable": "^1.5.10",
+    "vue-jest": "^1.0.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
